fix style spacing and sentance casing on header titles

--- a/src/components/FileUploadModal/style.css
+++ b/src/components/FileUploadModal/style.css
@@ -1,5 +1,6 @@
 .upload-modal .extra-info {
     margin-top: .25rem;
+    margin-bottom: 0rem;
     color: var(--light-theme-modal-supplemental-text);
     font-size: 14px;
 }
